<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="fill_parent"
      android:padding="15dp"
      android:paddingTop="35dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="10dp">

        <AutoCompleteTextView
            android:id="@+id/station_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:hint="@string/departures_from"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

        <AutoCompleteTextView
            android:id="@+id/optional_station_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:hint="@string/departures_to"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/station_code"/>

        <RadioGroup android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/optional_station_code">

            <RadioButton android:id="@+id/departures"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/departures"
                 android:onClick="onBoardTypeChanged"/>

            <RadioButton android:id="@+id/arrivals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/arrivals"
                 android:onClick="onBoardTypeChanged"/>
        </RadioGroup>

        <Button
            android:id="@+id/view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="14dp"
            android:text="@string/view_board"/>

    </RelativeLayout>

</LinearLayout>